  * Add "Input Engine" including some remarks about DGT
- NLS
  * Add tags for all hardware connection dialogues
  * German translation for the tags added
- Database information
  * Add the ability to write Dublin Core metadata for a Scid database
  by means of Tools / Database information. This includes reading
  metadata from a sme file.
- FICS console : autoscrolling is turned off if the view is not located at the end of the text
- Mask (Tree window) : 
	* added menu entry to remove NAG value for a move
	* added entry in popup menu to enter moves not present in Tree
	* In training mode, game is annotated if the user made poor moves (related to values in Mask)
- Book tuning : 
	* any move can be added to a polyglot book at a given position (thanks to Michel Van den Bergh)
	* moves present in the book at ply N+1 but where the previous move is not present at ply N, is displayed in the lower part of the book window : see button "other moves" and its tooltip (thanks to Michel Van den Bergh)
- Plenty of changes in user interface
	* New entry in "options -> windows" to show / hide game info panel (this can also be triggered in docked mode by using main board tab)
	* New option-> Themes (only small parts of Scid are themable, this will be increased in the future)
	* Removed file combobox.tcl (widget migrated to ttk::combobox)
	* Windows can be docked inside a main window (options menu) : In docked mode, the most important windows are embedded into a main one. The windows can be reordered by right-clicking on the tab (where the title of the window is) and by dragging tabs from one notebook to another. The menu for each window that has one (marked with a triangle at the left of the tab) is opened by left cliking on the tab.
- updated dutch translation (thanks to Michel Van den Bergh)
- updated spanish translation (thanks to Benigno Hernández)
- Fix : Tree window : when a Mask is opened, the whole line is clickable (not only the part with moves and stats)