@@ -655,7 +655,7 @@ scid-3.6.7
 - Book tuning : 
 	* any move can be added to a polyglot book at a given position (thanks to Michel Van den Bergh)
 	* moves present in the book at ply N+1 but where the previous move is not present at ply N, is displayed in the lower part of the book window : see button "other moves" and its tooltip (thanks to Michel Van den Bergh)
-- Plenty of changes in user interface
+- Plenty of changes in user interface, among others :
 	* New entry in "options -> windows" to show / hide game info panel (this can also be triggered in docked mode by using main board tab)
 	* New option-> Themes (only small parts of Scid are themable, this will be increased in the future)
 	* Removed file combobox.tcl (widget migrated to ttk::combobox)
@@ -663,3 +663,4 @@ scid-3.6.7
 - updated dutch translation (thanks to Michel Van den Bergh)
 - updated spanish translation (thanks to Benigno Hernández)
 - Fix : Tree window : when a Mask is opened, the whole line is clickable (not only the part with moves and stats)
+- Fix : FICS connection. Better handling of connection error if behind a firewall or network is down
